--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/react-dom": "^19.0.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.6"
   },
